# SysY-Compiler-2023

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  cmake.sh  dos2unix.sh  download.py  main.cpp  zip.sh
.github/workflows/: auto-test.yml  cmake.yml
doc/: .gitignore  Design.md  SysY2023.g4  SysY2023plus.g4
src/: dbg.h  enum.h  main.cpp  mips.h  mir.h  settings.h  slice.h  str_helper.h  util.h
src/backend/: alias.h  arithmetic.cpp  backend_opt.cpp  backend_opt.h  component.cpp  component.h  operand.h  reg_alloca.cpp  reg_alloca.h  translator.cpp  translator.h
src/frontend/: grammar.h  lexer.cpp  lexer.h  message.h  parser.cpp  parser.h  token.h  visitor.cpp  visitor.h
src/lir/: build.h  constant.h  dag.h  dot.h
src/mips/: alias.h  arithmetic.cpp  backend_opt.cpp  backend_opt.h  component.h  inline_printer.cpp  instruction.h  mips.cpp  operand.h  opt.cpp  opt.h  printer.cpp  printer.h  reg_alloca.cpp  reg_alloca.h  translator.cpp  translator.h
src/mir/: derived_value.cpp  derived_value.h  instruction.cpp  instruction.h  manager.h  type.cpp  type.h  value.h
src/opt/: array.cpp  constant.cpp  functional.cpp  functional.h  gcm.cpp  gvn.cpp  lvn.cpp  mem2reg.cpp  mem2reg.h  opt.cpp  opt.h
src/riscv/: alias.h  instruction.cpp  instruction.h  lir.cpp  lir.h  memset0.asm  operand.h  opt.cpp  opt.h  printer.cpp  printer.h  reg.h  reg_alloca.cpp  reg_alloca.h  translator.cpp  translator.h
tests/: .gitignore  auto_llvm.sh  auto_test.py  auto_test.sh  input.py  link.sh  run.sh  run_asm.sh  run_llvm.sh  run_mips.sh  test_llvm.sh  test_mips.sh
tests/A/: output1.txt  output10.txt  output13.txt  output14.txt  output15.txt  output17.txt  output19.txt  output2.txt  output20.txt  output21.txt  output24.txt  output25.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output4.txt  output5.txt  output6.txt  output7.txt  output9.txt  testfile13.txt  testfile14.txt  testfile17.txt  testfile22.txt  testfile24.txt  testfile25.txt  testfile27.txt  testfile28.txt  testfile29.txt  testfile30.txt  testfile5.txt  testfile6.txt  testfile7.txt
tests/A1/: input13.txt  input22.txt  input23.txt  input5.txt  output1.txt  output12.txt  output15.txt  output22.txt  output24.txt  output26.txt  output4.txt  output8.txt  output9.txt  testfile10.txt  testfile15.txt  testfile19.txt  testfile2.txt  testfile20.txt  testfile21.txt  testfile23.txt  testfile26.txt  testfile3.txt  testfile30.txt  testfile4.txt  testfile8.txt  testfile9.txt
tests/A2/: output1.txt  output13.txt  output3.txt  output4.txt  output6.txt  output9.txt  testfile1.txt  testfile13.txt  testfile14.txt  testfile7.txt  testfile9.txt
tests/B/: input10.txt  input15.txt  input19.txt  input30.txt  output1.txt  output10.txt  output13.txt  output14.txt  output16.txt  output22.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output5.txt  output7.txt  output8.txt  testfile1.txt  testfile10.txt  testfile12.txt  testfile17.txt  testfile2.txt  testfile23.txt  testfile26.txt  testfile27.txt  testfile30.txt  testfile6.txt  testfile9.txt
tests/B1/: input25.txt  input28.txt  output11.txt  output12.txt  output15.txt  output16.txt  output17.txt  output19.txt  output2.txt  output21.txt  output23.txt  output4.txt  output6.txt  output9.txt  testfile11.txt  testfile14.txt  testfile15.txt  testfile16.txt  testfile18.txt  testfile19.txt  testfile21.txt  testfile22.txt  testfile24.txt  testfile25.txt  testfile28.txt  testfile3.txt  testfile4.txt  testfile7.txt  testfile8.txt
tests/B2/: input17.txt  input9.txt  output1.txt  output10.txt  output12.txt  output13.txt  output14.txt  output17.txt  output18.txt  output2.txt  output3.txt  output4.txt  output6.txt  output9.txt  testfile1.txt  testfile10.txt  testfile11.txt  testfile12.txt  testfile13.txt  testfile14.txt  testfile15.txt  testfile16.txt  testfile17.txt  testfile18.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt  testfile9.txt
tests/C/: output10.txt  output14.txt  output17.txt  output18.txt  output19.txt  output20.txt  output22.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output4.txt  output5.txt  output6.txt  output7.txt  testfile12.txt  testfile14.txt  testfile15.txt  testfile16.txt  testfile18.txt  testfile20.txt  testfile27.txt  testfile5.txt  testfile8.txt  testfile9.txt
tests/C1/: input18.txt  output10.txt  output13.txt  output15.txt  output16.txt  output17.txt  output2.txt  output22.txt  output23.txt  output24.txt  output7.txt  output8.txt  output9.txt  testfile19.txt  testfile2.txt  testfile22.txt  testfile24.txt  testfile26.txt  testfile30.txt  testfile4.txt  testfile6.txt  testfile7.txt
tests/C2/: output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  testfile1.txt  testfile10.txt  testfile12.txt  testfile13.txt  testfile14.txt  testfile15.txt  testfile16.txt  testfile17.txt  testfile18.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt  testfile9.txt
tests/D/: input3.txt  input5.txt  input6.txt  output1.txt  output2.txt  output5.txt  output6.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt
tests/D1/: input6.txt  output3.txt  output4.txt  output5.txt  testfile1.txt  testfile3.txt  testfile5.txt  testfile6.txt
tests/D2/: input12.txt  output10.txt  output12.txt  output14.txt  output2.txt  output5.txt  output7.txt  output8.txt  testfile10.txt  testfile11.txt  testfile12.txt  testfile15.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile8.txt
tests/libsysy/: libsysy.c  libsysy.h
